# StaffManager

./: CMakeLists.txt  Person.cpp  Person.h  PersonInterface.cpp  PersonInterface.h  PersonManager.cpp  PersonManager.h  PersonManagerInterface.cpp  PersonManagerInterface.h  README.md  Staff.cpp  Staff.h  StaffInterface.cpp  StaffInterface.h  main.cpp
model/: Faculty.cpp  Faculty.h  Person.cpp  Person.h  Staff.cpp  Staff.h
